objects/Account.object
<CustomObject>
    <fields>
        <fullName>AAA__c</fullName>
        <label>AAA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHG__c</fullName>
        <label>CHG</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognizant__c</fullName>
        <label>Cognizant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Hat__c</fullName>
        <label>Red Hat</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pacific__c</fullName>
        <label>pacific</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zxc__c</fullName>
        <label>zxc</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>